キャプチャボタンを実装
キャプチャ画像を外部APIに投げて開く (Gyazo的)
CORS対応は別途必要
